Much better tree to side... Went around fancy controls used a good ole fashioned table.. Rather then an out of box nasty that simulates one.. Which is really what I wanted.. Plus the table handles the issue of resizing.. Looks good IMHO

--- a/src/app/pages/common/entity/entity-table/entity-group-table.component.scss
+++ b/src/app/pages/common/entity/entity-table/entity-group-table.component.scss
@@ -12,3 +12,18 @@
     width: 100%; 
     padding-left: 5px;
 }
+
+
+.custom_table {
+    width: 90%;
+    overflow-x: inherit;
+}
+
+
+.custom_table_left_nav_td {
+vertical-align: top; 
+}
+
+.custom_table_right_nav_td {
+vertical-align: top; 
+}
